--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="unlock (1).svg" alt="cadeado fechado">
    <h2 class="titulo-principal"> Gerador de senhas</h2>
    <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatoria e segura</h3> 
 </body>
