--- a/index.html
+++ b/index.html
@@ -31,9 +31,24 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
-                        <input type="checkbox" name="maiusculo" class="checkbox" check>
+                        <input type="checkbox" name="maiusculo" class="checkbox" checked>
                         <label for="maiusculo">Letras maiusculas</label>
                     </div>
+                    <div class="parametro-senha-checkbox">
+                        <input type="checkbox" name="miusculo" class="checkbox" check>
+                        <label for="maiusculo">Letras miusculas</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input type="checkbox" name="numero" class="checkbox" check>
+                        <label for="maiusculo">Numeros</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input type="checkbox" name="simbolo" class="checkbox" check>
+                        <label for="maiusculo">Simbolos</label>
+                    </div>
+                </div>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha_titulo">Força da senha</h4>
                 </div>
             </div>
         </div>
