--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha_titulo">Força da senha</h4>
+                    <div class="barra">
+                        <div class="forca forte">
+                            <div class="parametro-senha-textos">
+                                <p>Fraca</p>
+                                <p>Mèdia</p>
+                                <p>Forte</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
