--- a/index.html
+++ b/index.html
@@ -3,64 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de senhas</title>
+    <title>Gerador de Senha</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="conteudo">
-        <div class="conteudo-titulo">
-            <img src="unlock (1).svg" alt="cadeado fechado">
-            <h2 class="titulo-principal"> Gerador de senhas</h2>
-            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatoria e segura</h3> 
-        </div>
-        <div class="conteudo senha">
-            <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha">
-        </div>
-        <div class="parametro">
-            <h3 class="parametro-titulo">Personalize sua senha</h3>
-            <div class="parametro-coluna__senha">
-                <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                    <div class="parametro-senha-botoes">
-                        <button class="parametro-senha__botao">-</button>
-                        <p class="parametro-senha__texto">12</p>
-                        <button class="parametro-senha__botao">+</button>
-                    </div>
+   <section class="conteudo">
+     <div class="conteudo-titulo">
+    <img src="unlock (1).svg" alt="Cadeado Fechado">
+    <h2 class="titulo-principal"> Gerador de Senhas</h2>
+    <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+    </div>
+
+    <div class="conteudo-senha">
+        <label for="senha">Senha</label>
+        <input name="senha" type="text" id="campo-senha">
+    </div>
+
+    <div class="parametro">
+        <h3 class="parametro-titulo">Personalize sua senha</h3>
+        <div class="parametro-coluna_senha">
+            <div class="parametro-senha">
+                <h4 class="parametro-senha_titulo">Número de caracteres</h4>
+                <div class="parametro-senha-botoes">
+                    <button class="parametro-senha_botao">-</button>
+                    <p class="parametro-senha_texto">12</p>
+                    <button class="parametro-senha_botao">+</button>
                 </div>
-                <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Características da senha</h4>
-                    <div class="parametro-senha-checkbox">
-                        <input type="checkbox" name="maiusculo" class="checkbox" checked>
-                        <label for="maiusculo">Letras maiusculas</label>
-                    </div>
-                    <div class="parametro-senha-checkbox">
-                        <input type="checkbox" name="miusculo" class="checkbox" check>
-                        <label for="maiusculo">Letras miusculas</label>
-                    </div>
-                    <div class="parametro-senha-checkbox">
-                        <input type="checkbox" name="numero" class="checkbox" check>
-                        <label for="maiusculo">Numeros</label>
-                    </div>
-                    <div class="parametro-senha-checkbox">
-                        <input type="checkbox" name="simbolo" class="checkbox" check>
-                        <label for="maiusculo">Simbolos</label>
-                    </div>
+            </div>
+            <div class="parametro-senha">
+                <h4 class="parametro-senha_titulo">Características da senha</h4>
+                <div class="parametro-senha-checkbox">
+                    <input type="checkbox" name="maiusculo" class="checkbox" checked>
+                    <label for="maiusculo">Letras maiúsculas</label>
                 </div>
-                <div class="parametro-senha">
-                    <h4 class="parametro-senha_titulo">Força da senha</h4>
-                    <div class="barra">
-                        <div class="forca forte">
-                            <div class="parametro-senha-textos">
-                                <p>Fraca</p>
-                                <p>Mèdia</p>
-                                <p>Forte</p>
-                            </div>
+                   <div class="parametro-senha-checkbox">
+                    <input type="checkbox" name="minusculo" class="checkbox">
+                    <label for="minusculo">Letras minúsculas</label>
+                </div>
+                   <div class="parametro-senha-checkbox">
+                    <input type="checkbox" name="numero" class="checkbox" >
+                    <label for="numero">Números</label>
+                </div>
+                   <div class="parametro-senha-checkbox">
+                    <input type="checkbox" name="simbolo" class="checkbox">
+                    <label for="simbolo">Símbolos</label>
+                </div>
+            </div>
+            <div class="parametro-senha">
+                <h4 class="parametro-senha_titulo">Força da senha</h4>
+                <div class="barra">
+                    <div class="forca forte">
+                        <div class="parametro-senha-textos">
+                            <p>Fraca</p>
+                            <p>Média</p>
+                            <p>Forte</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    </body>
-    </html>
+
+    </div>
+   </section>
+   
+</body>
+</html>
