--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         </div>
                     </div>
                 </div>
+                <script src="main.js"></script>
             </div>
         </div>
 
